--- a/src/css/styles/site.css
+++ b/src/css/styles/site.css
@@ -106,7 +106,169 @@
   .text-base-medium-leading6-trackingwide {
     @apply text-base-medium-leading6 tracking-tight;
   }
-  .text-base-medium-leading6-trackingwide {
+  .text-base-medium-leading6-trackingwider {
     @apply text-base-medium-leading6 tracking-wide;
+  }
+  .text-base-normal-leading7 {
+    @apply text-base font-normal font-base leading-7;
+  }
+  .text-base-medium-leading7 {
+    @apply text-base font-medium font-base leading-7;
+  }
+  .text-base-semi-leading7 {
+    @apply text-base font-semibold font-base leading-7;
+  }
+  .text-base-bold-leading7 {
+    @apply text-base font-bold font-base leading-7;
+  }
+  .text-base-normal-leading8 {
+    @apply text-base font-normal font-base leading-8;
+  }
+  .text-base-medium-leading8 {
+    @apply text-base font-medium font-base leading-8;
+  }
+  .text-base-semi-leading8 {
+    @apply text-base font-semibold font-base leading-8;
+  }
+  .text-base-bold-leading8 {
+    @apply text-base font-bold font-base leading-8;
+  }
+  .text-lg-normal-leadingnone {
+    @apply text-lg font-normal font-base leading-none;
+  }
+  .text-lg-normal-leading6 {
+    @apply text-lg font-normal font-base leading-normal;
+  }
+  .text-lg-medium-leading6 {
+    @apply text-lg font-medium font-base leading-normal;
+  }
+  .text-lg-semi-leading6 {
+    @apply text-lg font-semibold font-base leading-normal;
+  }
+  .text-lg-bold-leading6 {
+    @apply text-lg font-bold font-base leading-normal;
+  }
+  .text-lg-semi-leading6-trackingwider {
+    @apply text-lg font-semibold font-base leading-normal tracking-wide;
+  }
+  .text-lg-normal-leading7 {
+    @apply text-lg font-normal font-base leading-7;
+  }
+  .text-lg-medium-leading7 {
+    @apply text-lg font-medium font-base leading-7;
+  }
+  .text-lg-semi-leading7 {
+    @apply text-lg font-semibold font-base leading-7;
+  }
+  .text-lg-bold-leading7 {
+    @apply text-lg font-bold font-base leading-7;
+  }
+
+  .text-lg-normal-leading8 {
+    @apply text-lg font-normal font-base leading-loose;
+  }
+  .text-lg-medium-leading8 {
+    @apply text-lg font-medium font-base leading-loose;
+  }
+  .text-lg-semi-leading8 {
+    @apply text-lg font-semibold font-base leading-loose;
+  }
+
+  .text-xl-normal-leadingnone {
+    @apply text-xl font-normal font-base leading-none;
+  }
+
+  .text-xl-normal-leading7 {
+    @apply text-xl font-normal font-base leading-7;
+  }
+  .text-xl-medium-leading7 {
+    @apply text-xl font-medium font-base leading-7;
+  }
+  .text-xl-semi-leading7 {
+    @apply text-xl font-semibold font-base leading-7;
+  }
+  .text-xl-bold-leading7 {
+    @apply text-xl font-bold font-base leading-7;
+  }
+  .text-xl-normal-leading8 {
+    @apply text-xl font-normal font-base leading-loose;
+  }
+  .text-xl-semi-leading8 {
+    @apply text-xl font-semibold font-base leading-loose;
+  }
+  .text-2xl-normal-leadingnone {
+    @apply text-2xl font-normal font-base leading-normal;
+  }
+  .text-2xl-bold-leading7 {
+    @apply text-2xl font-bold font-base leading-7;
+  }
+  .text-2xl-normal-leading8 {
+    @apply text-2xl font-normal font-base leading-loose;
+  }
+  .text-2xl-medium-leading8 {
+    @apply text-2xl font-medium font-base leading-loose;
+  }
+  .text-2xl-semi-leading8 {
+    @apply text-2xl font-semibold font-base leading-loose;
+  }
+  .text-2xl-bold-leading8 {
+    @apply text-2xl font-bold font-base leading-loose;
+  }
+  .text-2xl-extrabold-leading8-trackingtight {
+    @apply text-2xl font-extrabold font-base leading-loose;
+  }
+  .text-2xl-medium-leading9 {
+    @apply text-2xl font-medium font-base leading-9;
+  }
+  .text-3xl-extrabold-leading8-trackingtight {
+    @apply text-3xl font-extrabold font-base leading-loose;
+  }
+  .text-3xl-normal-leading9 {
+    @apply text-3xl font-normal font-base leading-9;
+  }
+  .text-3xl-medium-leading9 {
+    @apply text-3xl font-medium font-base leading-9;
+  }
+  .text-3xl-semi-leading9 {
+    @apply text-3xl font-semibold font-base leading-9;
+  }
+  .text-3xl-bold-leading9 {
+    @apply text-3xl font-bold font-base leading-9;
+  }
+  .text-3xl-extrabold-leading9 {
+    @apply text-3xl font-extrabold font-base leading-9;
+  }
+  .text-3xl-bold-leading10 {
+    @apply text-3xl font-bold font-base leading-10;
+  }
+  .text-4xl-normal-leading10 {
+    @apply text-4xl font-normal font-base leading-10;
+  }
+  .text-4xl-medium-leading10 {
+    @apply text-4xl font-medium font-base leading-10;
+  }
+  .text-4xl-extrabold-leading10 {
+    @apply text-4xl font-extrabold font-base leading-10;
+  }
+  .text-5xl-normal-leadingnone {
+    @apply text-5xl font-normal font-base leading-[48px];
+  }
+  .text-5xl-extrabold-leadingnone {
+    @apply text-5xl font-extrabold font-base leading-[48px];
+  }
+  .text-6xl-normal-leadingnone {
+    @apply text-6xl font-normal font-base leading-[60px];
+  }
+  .text-6xl-extrabold-leadingnone {
+    @apply text-6xl font-extrabold font-base leading-[60px];
+  }
+  .text-7xl-normal-leadingnone {
+    @apply text-7xl font-normal font-base leading-[60px];
+  }
+  .text-8xl-normal-leadingnone {
+    @apply text-8xl font-normal font-base leading-[60px];
+  }
+  .text-9xl-normal-leadingnone {
+    @apply text-9xl font-normal font-base leading-[60px];
   }
 }
