--- a/BlazorHypiness/Components/Layouts/ContainerStretched.razor
+++ b/BlazorHypiness/Components/Layouts/ContainerStretched.razor
@@ -1,5 +1,4 @@
-﻿@using BlazorHypiness.Infrastructure;
-@inherits HypinessComponent
+﻿@inherits HypinessComponent
 
 <div class="hyp-stretched-container @CompiledCss">
     @ChildContent
