added single container file

--- a/src/css/Components/Layouts/Container.css
+++ b/src/css/Components/Layouts/Container.css
@@ -1,3 +1,7 @@
 .hyp-stretched-container {
   @apply hyp-px-[1.81px] md:hyp-px-[5.85px] hyp-py-[3px];
 }
+
+.hyp-padded-container {
+  @apply hyp-px-[1.65px] hyp-py-[3px] md:hyp-px-[5.85px];
+}
