added gray in card

--- a/BlazorHypiness/Components/Layouts/Card.razor
+++ b/BlazorHypiness/Components/Layouts/Card.razor
@@ -1,4 +1,5 @@
-﻿@inherits HypinessComponent
+﻿@using BlazorHypiness.Constants;
+@inherits HypinessComponent
 
 
 @if (Header is not null)
@@ -10,7 +11,7 @@
     </div>
 }
 
-<div class="hyp-card-body" @attributes="InputAttributes">
+<div class="hyp-card-body @CompiledCss" @attributes="InputAttributes">
     @if (Body is not null)
     {
         @Body
@@ -24,7 +25,7 @@
 @if (Footer is not null)
 {
     <div class="hyp-card-divider"></div>
-    <div class="hyp-card-footer">
+    <div class="hyp-card-footer @(IsGrayFooter?BG_GRAY:Strings.EMPTY_STRING)">
         @Footer
     </div>
 }
@@ -32,6 +33,8 @@
 @code {
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
+
+    private const string BG_GRAY = "hyp-bg-gray-50";
 
     [Parameter]
     public RenderFragment? Header { get; set; }
@@ -41,4 +44,17 @@
 
     [Parameter]
     public RenderFragment? Footer { get; set; }
+
+    [Parameter]
+    public bool IsGrayFooter { get; set; }
+
+    [Parameter]
+    public bool IsGrayBody { get; set; }
+
+    protected override CssBuilder BuildCss(CssBuilder builder)
+    {
+        if (IsGrayBody)
+            builder.Add(BG_GRAY);
+        return base.BuildCss(builder);
+    }
 }
